--- a/DataFormats/WrappedStdDictionaries/CMakeLists.txt
+++ b/DataFormats/WrappedStdDictionaries/CMakeLists.txt
@@ -7,8 +7,5 @@ include_directories(${TBB_INCLUDE_DIRS})
 include_directories(${TINYXML2_INCLUDE_DIR})
 include_directories(${UUID_INCLUDE_DIR})
 add_library(DataFormatsWrappedStdDictionaries INTERFACE)
-reflex_generate_dictionary(DataFormatsWrappedStdDictionaries src/classes.h src/classes_def.xml ROOTMAPLIB DataFormatsWrappedStdDictionariesDict)
-add_library(DataFormatsWrappedStdDictionariesDict SHARED DataFormatsWrappedStdDictionariesDict.cpp)
-add_dependencies(DataFormatsWrappedStdDictionaries DataFormatsWrappedStdDictionariesGen)
-install( TARGETS DataFormatsWrappedStdDictionariesDict DESTINATION lib EXPORT stitched::DataFormatsWrappedStdDictionariesDict )
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsWrappedStdDictionariesDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsWrappedStdDictionaries.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+reflex_build_dictionary(DataFormatsWrappedStdDictionaries src/classes.h src/classes_def.xml OPTIONS )
+add_dependencies(DataFormatsWrappedStdDictionaries DataFormatsWrappedStdDictionaries-dictgen)
