--- a/FWCore/Catalog/CMakeLists.txt
+++ b/FWCore/Catalog/CMakeLists.txt
@@ -35,5 +35,5 @@ target_link_libraries(FWCoreCatalog PUBLIC
   Threads::Threads
 )
 
-install( TARGETS FWCoreCatalog DESTINATION  lib  EXPORT stitched::FWCoreCatalog)
+install( TARGETS FWCoreCatalog DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreCatalog)
 
