--- a/FWCore/Concurrency/CMakeLists.txt
+++ b/FWCore/Concurrency/CMakeLists.txt
@@ -20,5 +20,5 @@ target_link_libraries(FWCoreConcurrency PUBLIC
   ${XERCESC_LIBRARIES}
 )
 
-install( TARGETS FWCoreConcurrency DESTINATION  lib  EXPORT stitched::FWCoreConcurrency)
+install( TARGETS FWCoreConcurrency DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreConcurrency)
 
