--- a/SimDataFormats/RandomEngine/CMakeLists.txt
+++ b/SimDataFormats/RandomEngine/CMakeLists.txt
@@ -27,7 +27,7 @@ target_link_libraries(SimDataFormatsRandomEngine PUBLIC
   Threads::Threads
 )
 
-install( TARGETS SimDataFormatsRandomEngine DESTINATION  lib  EXPORT stitched::SimDataFormatsRandomEngine)
+install( TARGETS SimDataFormatsRandomEngine DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::SimDataFormatsRandomEngine)
 
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(/usr/include/)
@@ -37,8 +37,5 @@ include_directories(${ROOT_INCLUDE_DIR})
 include_directories(${TBB_INCLUDE_DIRS})
 include_directories(${TINYXML2_INCLUDE_DIR})
 include_directories(${UUID_INCLUDE_DIR})
-reflex_generate_dictionary(SimDataFormatsRandomEngine src/classes.h src/classes_def.xml ROOTMAPLIB SimDataFormatsRandomEngineDict)
-add_library(SimDataFormatsRandomEngineDict SHARED SimDataFormatsRandomEngineDict.cpp)
-add_dependencies(SimDataFormatsRandomEngine SimDataFormatsRandomEngineGen)
-install( TARGETS SimDataFormatsRandomEngineDict DESTINATION lib EXPORT stitched::SimDataFormatsRandomEngineDict )
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/SimDataFormatsRandomEngineDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/SimDataFormatsRandomEngine.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+reflex_build_dictionary(SimDataFormatsRandomEngine src/classes.h src/classes_def.xml OPTIONS )
+add_dependencies(SimDataFormatsRandomEngine SimDataFormatsRandomEngine-dictgen)
