--- a/IOPool/TFileAdaptor/test/CMakeLists.txt
+++ b/IOPool/TFileAdaptor/test/CMakeLists.txt
@@ -19,7 +19,10 @@ add_compile_options("-D_FILE_OFFSET_BITS=64")
 target_link_libraries(test_TFileAdaptor_TFile PUBLIC
   FWCorePluginManager
   IOPoolTFileAdaptor
-  ROOT::Core
+  ROOT::MathCore
+  ROOT::Net
+  ROOT::Thread
+  ROOT::Tree
   UtilitiesStorageFactory
 )
 
